Bug 324850 - A connection error dialog pops up on start
Summary: A connection error dialog pops up on start
Status: RESOLVED FIXED
Alias: None
Product: trojita
Classification: Applications
Component: Desktop GUI (other bugs)
Version First Reported In: git
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Trojita default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-12 17:29 UTC by Joshua J. Kugler
Modified: 2013-11-15 18:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joshua J. Kugler 2013-09-12 17:29:11 UTC
Starting up trojita.nightly, I get a dialog that says Connection Error "The QProcess is having troubles: No such file or directory" 

This appears to be from not having a configured IMAP account.

Reproducible: Always

Steps to Reproduce:
Install Trojita. Start up without configuring IMAP. 


Expected Results:  
Maybe a warning, or a more informative message.
Comment 1 Jan Kundrát 2013-09-13 09:08:46 UTC
The steps to reproduce are actually:

1) install Trojita
2) run Trojita
3) a configuration dialog appears, press "OK" in there
4) an error message shows up

If the user presses "Cancel" at step three, Trojita works as expected.
Comment 2 Jan Kundrát 2013-11-15 18:50:00 UTC
Git commit 993af45ad1478a087c11b01084f640f2f17aeb1f by Jan Kundrát.
Committed on 15/11/2013 at 15:51.
Pushed by jkt into branch 'master'.

Add UI hints and prevent saving a configuration which definitely is not going to work

v2: Check more fields -- thanks to Caspar for review.
REVIEW: 113886

M  +80   -0    src/Gui/SettingsDialog.cpp
M  +5    -0    src/Gui/SettingsDialog.h

http://commits.kde.org/trojita/993af45ad1478a087c11b01084f640f2f17aeb1f