Add UI hints and prevent saving a configuration which definitely is not going to work

v2: Check more fields -- thanks to Caspar for review.

BUG: 324850
REVIEW: 113886